CHANGES-1.3.txt
---------------

CHANGES IN CUPS V1.3.10

	- Documentation fixes (STR #2994, STR #2995, STR #3008)
	- The "-o job-hold-until=week-end" option did not work properly
	  (STR #3025)
	- The Solaris USB printer device does not support select or poll
	  (STR #3028)
	- The scheduler would crash if you exceeded the MaxSubscriptions
	  limit.
	- The lp "-H immediate" option did not specify that the job
	  should not be held (STR #3013)
	- The scheduler did not support the "Connection: close"
	  HTTP header (STR #3010)
	- The mailto notifier didn't terminate messages properly
	  (STR #3011)
	- Backends could spin trying to read back-channel data
	  (STR #3001)
	- The HP-GL/2 filter was using the wrong default colors
	  (STR #2966)
	- The scheduler incorrectly allowed Get-Jobs operations without a
	  printer-uri (STR #2996)
	- The compression option was not being encoded properly
	  (STR #2997)
	- Added a missing character map for JIS-X0213/ShiftJIS.
	- The scheduler now rejects ATTR: messages with empty values.
	- The scheduler could consume all CPU handling closed connections
	  (STR #2988)
	- The scheduler now protects against DNS rebinding attacks on
	  localhost.
	- SECURITY: The PNG image reading code did not validate the
	  image size properly, leading to a potential buffer overflow
	  (STR #2974)
	- Fixed some configure script bugs with rc/xinetd directories
	  (STR #2970)
	- The Epson sample driver PPDs contained errors (STR #2979)


CHANGES IN CUPS V1.3.9

	- SECURITY: The HP-GL/2 filter did not range check pen numbers
	  (STR #2911)
	- SECURITY: The SGI image file reader did not range check
	  16-bit run lengths (STR #2918)
	- SECURITY: The text filter did not range check cpi, lpi, or
	  column values (STR #2919)
	- Documentation updates (STR #2904, STR #2944)
	- The French web admin page was never updated (STR #2963)
	- The IPP backend did not retry print jobs when the printer
	  reported itself as busy or unavailable (STR #2951)