@@ -4,6 +4,9 @@ CHANGES-1.3.txt
 CHANGES IN CUPS V1.3.10
 
 	- Documentation fixes (STR #2994, STR #2995, STR #3008)
+	- The scheduler did not purge jobs that were missing a
+	  time-at-creation attribute, indicating a bad job control file
+	  (STR #3030)
 	- The "-o job-hold-until=week-end" option did not work properly
 	  (STR #3025)
 	- The Solaris USB printer device does not support select or poll
